--- a/catalog/templates/catalog/contacts.html
+++ b/catalog/templates/catalog/contacts.html
@@ -23,25 +23,35 @@
 <div class="container">
     <div class="row text-start">
         <div class="col-lg-9 col-md-6 col-sm-12">
+        <div class="container">
+        {% for contact in contacts %}
+
+        <div class="col-12">
             <div class="card mb-4 box-shadow">
                 <div class="card-body">
                     <table class="table table-striped">
                         <tr>
-                            <td class="w-25">Страна</td>
-                            <td>USA</td>
+                            <td class="w-25">Контакт</td>
+                            <td>{{contact.name}}</td>
                         </tr>
                         <tr>
-                            <td class="w-25">ИНН</td>
-                            <td>91-1144442</td>
+                            <td class="w-25">Телефон</td>
+                            <td>{{contact.phone_number}}</td>
                         </tr>
                         <tr>
-                            <td class="w-25">Адрес</td>
-                            <td>Redmond,WA,98052-6399</td>
+                            <td class="w-25">Почта</td>
+                            <td>{{contact.email}}</td>
                         </tr>
                     </table>
                 </div>
             </div>
         </div>
+
+        {% endfor %}
+
+        </div>
+        </div>
+
         <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
