--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -34,6 +34,9 @@
                     <h4 class="my-0 font-weight-normal">{{product.name}}</h4>
                 </div>
                 <div class="card-body">
+                    {% if product.image %}
+                        <img src="{{product.image.url}}" class="img-fluid" alt="image" />
+                    {% endif %}
                     <h1 class="card-title pricing-card-title">$ {{product.price}}</h1>
                     <p>{{product.description}}</p>
                     <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
